fix(changelog): fix spacing on dedicated changelog page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -592,15 +592,6 @@ video {
 .ml-2 {
   margin-left: 0.5rem;
 }
-.mt-4 {
-  margin-top: 1rem;
-}
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
 .block {
   display: block;
 }
@@ -609,9 +600,6 @@ video {
 }
 .inline-flex {
   display: inline-flex;
-}
-.table {
-  display: table;
 }
 .hidden {
   display: none;
@@ -633,9 +621,6 @@ video {
 }
 .w-auto {
   width: auto;
-}
-.w-full {
-  width: 100%;
 }
 .max-w-3xl {
   max-width: 48rem;
@@ -736,12 +721,6 @@ video {
 .pb-3 {
   padding-bottom: 0.75rem;
 }
-.pb-2 {
-  padding-bottom: 0.5rem;
-}
-.text-right {
-  text-align: right;
-}
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
@@ -762,15 +741,8 @@ video {
   font-size: 1rem;
   line-height: 1.5rem;
 }
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
 .font-bold {
   font-weight: 700;
-}
-.font-black {
-  font-weight: 900;
 }
 .font-medium {
   font-weight: 500;
@@ -798,10 +770,6 @@ video {
 .text-gray-300 {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
-}
-.text-green-500 {
-  --tw-text-opacity: 1;
-  color: rgb(34 197 94 / var(--tw-text-opacity));
 }
 .antialiased {
   -webkit-font-smoothing: antialiased;
@@ -942,10 +910,6 @@ video {
 }
 
 @media (min-width: 1024px) {
-
-  .lg\:p-36 {
-    padding: 9rem;
-  }
 
   .lg\:py-36 {
     padding-top: 9rem;
